# rust-udemy-learn

./: .gitignore
hands_on_data_structures_algorithms/: Cargo.toml  README.md
hands_on_data_structures_algorithms/src/: main.rs
hands_on_data_structures_algorithms/v1-sorting/: Cargo.toml
hands_on_data_structures_algorithms/v1-sorting/src/: lib.rs
projects/invaders/: Cargo.toml
projects/invaders/src/: shot.rs
projects/invaders_backup/src/: invaders.rs  main.rs  player.rs
ultimate_rust_crash_course/exercise/c_simple_types/src/: lib.rs  main.rs
ultimate_rust_crash_course/exercise/d_control_flow_strings/src/: main.rs
ultimate_rust_crash_course/exercise/e_ownership_references/src/: main.rs
ultimate_rust_crash_course/exercise/f_structs_traits/src/: main.rs
ultimate_rust_crash_course/exercise/g_collections_enums/src/: main.rs
ultimate_rust_crash_course/exercise/h_closures_threads/src/: main.rs
