[package]
name = "hands_on_data_structures_algorithms-practice"
authors = ["jisang <testemail@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"  # Add this line
description = "Do not use this crate it is for demo purposes only"
keywords = ["demo", "practice", "learning"]  # Optional, each keyword must be ASCII alphanumeric, _, or -

[dependencies]
